添加内容解析  修改目录解析样式

--- a/docs/规则定义.md
+++ b/docs/规则定义.md
@@ -31,6 +31,7 @@ Rules = namedtuple('Rules', 'content_url chapter_selector content_selector')
 
   |   值    |          说明          |
   | :----: | :------------------: |
+  |   -1   |     不解析，跳转到原本网页      |
   |   0    |  表示章节网页需要当前页面url拼接   |
   |   1    | 表示章节链接使用本身自带的链接，不用拼接 |
   | netloc |       用域名进行拼接        |
